tests/compile-fail/integration__integration__enums__decompile_bad_conflict.snap
---
source: tests/integration/enums.rs
expression: stderr
---
error: ambiguous value for enum const 'Name'
  ┌─ <mapfile-1>:3:4
  │
3 │ 20 Name
  │    ^^^^ definition with value 20
4 │ 40 Name
  │    ^^^^ definition with value 40


